PA3/cool.output
Terminals unused in grammar

   ERROR


State 126 conflicts: 9 shift/reduce
State 138 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    6 feature_list: /* empty */
    7             | feature_list feature

    8 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
    9        | OBJECTID '(' ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID ':' TYPEID ASSIGN expr ';'
   11        | OBJECTID ':' TYPEID ';'

   12 formal_list: formal
   13            | formal_list ',' formal

   14 formal: OBJECTID ':' TYPEID

   15 expr_list_dispatch: expr
   16                   | expr_list_dispatch ',' expr

   17 expr_list_block: /* empty */
   18                | expr_list_block expr ';'

   19 expr: OBJECTID ASSIGN expr
   20     | expr '.' OBJECTID '(' expr_list_dispatch ')'
   21     | expr '.' OBJECTID '(' ')'
   22     | OBJECTID '(' expr_list_dispatch ')'
   23     | OBJECTID '(' ')'
   24     | expr '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   25     | expr '@' TYPEID '.' OBJECTID '(' ')'
   26     | IF expr THEN expr ELSE expr FI
   27     | WHILE expr LOOP expr POOL
   28     | '{' expr_list_block '}'
   29     | LET expr_let
   30     | CASE expr OF case_list ESAC
   31     | NEW TYPEID
   32     | ISVOID expr
   33     | expr '+' expr
   34     | expr '-' expr
   35     | expr '*' expr
   36     | expr '/' expr
   37     | '~' expr
   38     | expr '<' expr
   39     | expr LE expr
   40     | expr '=' expr
   41     | NOT expr
   42     | '(' expr ')'
   43     | OBJECTID
   44     | INT_CONST
   45     | STR_CONST
   46     | BOOL_CONST

   47 expr_let: OBJECTID ':' TYPEID IN expr
   48         | OBJECTID ':' TYPEID ASSIGN expr IN expr
   49         | OBJECTID ':' TYPEID ',' expr_let
   50         | OBJECTID ':' TYPEID ASSIGN expr ',' expr_let

   51 case_list: /* empty */
   52          | case_list case

   53 case: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 8 9 20 21 22 23 24 25 42
')' (41) 8 9 20 21 22 23 24 25 42
'*' (42) 35
'+' (43) 33
',' (44) 13 16 49 50
'-' (45) 34
'.' (46) 20 21 24 25
'/' (47) 36
':' (58) 8 9 10 11 14 47 48 49 50 53
';' (59) 4 5 8 9 10 11 18 53
'<' (60) 38
'=' (61) 40
'@' (64) 24 25
'{' (123) 4 5 8 9 28
'}' (125) 4 5 8 9 28
'~' (126) 37
error (256)
CLASS (258) 4 5
ELSE (259) 26
FI (260) 26
IF (261) 26
IN (262) 47 48
INHERITS (263) 5
LET (264) 29
LOOP (265) 27
POOL (266) 27
THEN (267) 26
WHILE (268) 27
CASE (269) 30
ESAC (270) 30
OF (271) 30
DARROW (272) 53
NEW (273) 31
ISVOID (274) 32
STR_CONST (275) 45
INT_CONST (276) 44
BOOL_CONST (277) 46
TYPEID (278) 4 5 8 9 10 11 14 24 25 31 47 48 49 50 53
OBJECTID (279) 8 9 10 11 14 19 20 21 22 23 24 25 43 47 48 49 50 53
ASSIGN (280) 10 19 48 50
NOT (281) 41
LE (282) 39
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5, on right: 2 3
feature_list (49)
    on left: 6 7, on right: 4 5 7
feature (50)
    on left: 8 9 10 11, on right: 7
formal_list (51)
    on left: 12 13, on right: 8 13
formal (52)
    on left: 14, on right: 12 13
expr_list_dispatch (53)
    on left: 15 16, on right: 16 20 22 24
expr_list_block (54)
    on left: 17 18, on right: 18 28
expr (55)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
    37 38 39 40 41 42 43 44 45 46, on right: 8 9 10 15 16 18 19 20
    21 24 25 26 27 30 32 33 34 35 36 37 38 39 40 41 42 47 48 50 53
expr_let (56)
    on left: 47 48 49 50, on right: 29 49 50
case_list (57)
    on left: 51 52, on right: 30 52
case (58)
    on left: 53, on right: 52


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


state 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


state 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 5

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


state 6

    0 $accept: program $end .

    $default  accept


state 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 10


state 9

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 11


state 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 12


state 11

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 14

    feature  go to state 15


state 12

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 6 (feature_list)

    feature_list  go to state 16


state 13

    8 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
    9        | OBJECTID . '(' ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID . ':' TYPEID ASSIGN expr ';'
   11        | OBJECTID . ':' TYPEID ';'

    '('  shift, and go to state 17
    ':'  shift, and go to state 18


state 14

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 19


state 15

    7 feature_list: feature_list feature .

    $default  reduce using rule 7 (feature_list)


state 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    7 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 20

    feature  go to state 15


state 17

    8 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}' ';'
    9        | OBJECTID '(' . ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 21
    ')'       shift, and go to state 22

    formal_list  go to state 23
    formal       go to state 24


state 18

   10 feature: OBJECTID ':' . TYPEID ASSIGN expr ';'
   11        | OBJECTID ':' . TYPEID ';'

    TYPEID  shift, and go to state 25


state 19

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


state 20

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 26


state 21

   14 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 27


state 22

    9 feature: OBJECTID '(' ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 28


state 23

    8 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}' ';'
   13 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 29
    ','  shift, and go to state 30


state 24

   12 formal_list: formal .

    $default  reduce using rule 12 (formal_list)


state 25

   10 feature: OBJECTID ':' TYPEID . ASSIGN expr ';'
   11        | OBJECTID ':' TYPEID . ';'

    ASSIGN  shift, and go to state 31
    ';'     shift, and go to state 32


state 26

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 27

   14 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 33


state 28

    9 feature: OBJECTID '(' ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 34


state 29

    8 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 35


state 30

   13 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 21

    formal  go to state 36


state 31

   10 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 51


state 32

   11 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 11 (feature)


state 33

   14 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 14 (formal)


state 34

    9 feature: OBJECTID '(' ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 52


state 35

    8 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 53


state 36

   13 formal_list: formal_list ',' formal .

    $default  reduce using rule 13 (formal_list)


state 37

   26 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 54


state 38

   29 expr: LET . expr_let

    OBJECTID  shift, and go to state 55

    expr_let  go to state 56


state 39

   27 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 57


state 40

   30 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 58


state 41

   31 expr: NEW . TYPEID

    TYPEID  shift, and go to state 59


state 42

   32 expr: ISVOID . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 60


state 43

   45 expr: STR_CONST .

    $default  reduce using rule 45 (expr)


state 44

   44 expr: INT_CONST .

    $default  reduce using rule 44 (expr)


state 45

   46 expr: BOOL_CONST .

    $default  reduce using rule 46 (expr)


state 46

   19 expr: OBJECTID . ASSIGN expr
   22     | OBJECTID . '(' expr_list_dispatch ')'
   23     | OBJECTID . '(' ')'
   43     | OBJECTID .

    ASSIGN  shift, and go to state 61
    '('     shift, and go to state 62

    $default  reduce using rule 43 (expr)


state 47

   41 expr: NOT . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 63


state 48

   37 expr: '~' . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 64


state 49

   28 expr: '{' . expr_list_block '}'

    $default  reduce using rule 17 (expr_list_block)

    expr_list_block  go to state 65


state 50

   42 expr: '(' . expr ')'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 66


state 51

   10 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   20 expr: expr . '.' OBJECTID '(' expr_list_dispatch ')'
   21     | expr . '.' OBJECTID '(' ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75
    ';'  shift, and go to state 76


state 52

    9 feature: OBJECTID '(' ')' ':' TYPEID '{' . expr '}' ';'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 77


state 53

    8 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 78


state 54

   20 expr: expr . '.' OBJECTID '(' expr_list_dispatch ')'
   21     | expr . '.' OBJECTID '(' ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   26     | IF expr . THEN expr ELSE expr FI
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    THEN  shift, and go to state 79
    LE    shift, and go to state 67
    '<'   shift, and go to state 68
    '='   shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73
    '@'   shift, and go to state 74
    '.'   shift, and go to state 75


state 55

   47 expr_let: OBJECTID . ':' TYPEID IN expr
   48         | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   49         | OBJECTID . ':' TYPEID ',' expr_let
   50         | OBJECTID . ':' TYPEID ASSIGN expr ',' expr_let

    ':'  shift, and go to state 80


state 56

   29 expr: LET expr_let .

    $default  reduce using rule 29 (expr)


state 57

   20 expr: expr . '.' OBJECTID '(' expr_list_dispatch ')'
   21     | expr . '.' OBJECTID '(' ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   27     | WHILE expr . LOOP expr POOL
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    LOOP  shift, and go to state 81
    LE    shift, and go to state 67
    '<'   shift, and go to state 68
    '='   shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73
    '@'   shift, and go to state 74
    '.'   shift, and go to state 75


state 58

   20 expr: expr . '.' OBJECTID '(' expr_list_dispatch ')'
   21     | expr . '.' OBJECTID '(' ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   30     | CASE expr . OF case_list ESAC
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    OF   shift, and go to state 82
    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75


state 59

   31 expr: NEW TYPEID .

    $default  reduce using rule 31 (expr)


state 60

   20 expr: expr . '.' OBJECTID '(' expr_list_dispatch ')'
   21     | expr . '.' OBJECTID '(' ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   32     | ISVOID expr .
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 32 (expr)


state 61

   19 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 83


state 62

   22 expr: OBJECTID '(' . expr_list_dispatch ')'
   23     | OBJECTID '(' . ')'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50
    ')'         shift, and go to state 84

    expr_list_dispatch  go to state 85
    expr                go to state 86


state 63

   20 expr: expr . '.' OBJECTID '(' expr_list_dispatch ')'
   21     | expr . '.' OBJECTID '(' ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr
   41     | NOT expr .

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 41 (expr)


state 64

   20 expr: expr . '.' OBJECTID '(' expr_list_dispatch ')'
   21     | expr . '.' OBJECTID '(' ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | '~' expr .
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 37 (expr)


state 65

   18 expr_list_block: expr_list_block . expr ';'
   28 expr: '{' expr_list_block . '}'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '}'         shift, and go to state 87
    '('         shift, and go to state 50

    expr  go to state 88


state 66

   20 expr: expr . '.' OBJECTID '(' expr_list_dispatch ')'
   21     | expr . '.' OBJECTID '(' ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr
   42     | '(' expr . ')'

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75
    ')'  shift, and go to state 89


state 67

   39 expr: expr LE . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 90


state 68

   38 expr: expr '<' . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 91


state 69

   40 expr: expr '=' . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 92


state 70

   33 expr: expr '+' . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 93


state 71

   34 expr: expr '-' . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 94


state 72

   35 expr: expr '*' . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 95


state 73

   36 expr: expr '/' . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 96


state 74

   24 expr: expr '@' . TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   25     | expr '@' . TYPEID '.' OBJECTID '(' ')'

    TYPEID  shift, and go to state 97


state 75

   20 expr: expr '.' . OBJECTID '(' expr_list_dispatch ')'
   21     | expr '.' . OBJECTID '(' ')'

    OBJECTID  shift, and go to state 98


state 76

   10 feature: OBJECTID ':' TYPEID ASSIGN expr ';' .

    $default  reduce using rule 10 (feature)


state 77

    9 feature: OBJECTID '(' ')' ':' TYPEID '{' expr . '}' ';'
   20 expr: expr . '.' OBJECTID '(' expr_list_dispatch ')'
   21     | expr . '.' OBJECTID '(' ')'
   24     | expr . '@' TYPEID '.' OBJECTID '(' expr_list_dispatch ')'
   25     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . LE expr
   40     | expr . '=' expr

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75
    '}'  shift, and go to state 99


state 78

    8 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' . expr '}' ';'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 100


state 79

   26 expr: IF expr THEN . expr ELSE expr FI

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 101


state 80

   47 expr_let: OBJECTID ':' . TYPEID IN expr
   48         | OBJECTID ':' . TYPEID ASSIGN expr IN expr
   49         | OBJECTID ':' . TYPEID ',' expr_let
   50         | OBJECTID ':' . TYPEID ASSIGN expr ',' expr_let

    TYPEID  shift, and go to state 102


state 81

   27 expr: WHILE expr LOOP . expr POOL
